starter/network.yml
Description: CD12352 - Infrastructure as Code Project - Network

Parameters:
  EnvironmentName:
    Type: String
    Description: An environment name that will be prefixed to resource names

  VpcCIDR:
    Type: String
    Description: Enter the CIDR block for the VPC.
    Default: "10.0.0.0/16"

  PublicSubnet1CIDR:
    Type: String
    Description: Enter the CIDR block for the public subnet in the first Availability Zone.
    Default: "10.0.1.0/24"

  PublicSubnet2CIDR:
    Type: String
    Description: Enter the CIDR block for the public subnet in the second Availability Zone.
    Default: "10.0.2.0/24"

  PrivateSubnet1CIDR:
    Type: String
    Description: Enter the CIDR block for the private subnet in the first Availability Zone.
    Default: "10.0.3.0/24"

  PrivateSubnet2CIDR:
    Type: String
    Description: Enter the CIDR block for the private subnet in the second Availability Zone.
    Default: "10.0.4.0/24"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-VPCIDR"
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-InternetGateway"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PublicSubnet1 (AZ1)"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PublicSubnet2 (AZ2)"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PrivateSubnet1 (AZ1)"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PrivateSubnet2 (AZ2)"
  
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-nat-gateway-eip-1"

  NatGatewayEIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-nat-gateway-eip-2"

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-nat-gateway-1"

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-nat-gateway-2"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PublicRouteTable"

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PrivateRouteTable"

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-PrivateRouteTable"

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NatGateway1

  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

Outputs:
  VPC:
    Description: VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${EnvironmentName}-VpcCIDR"
  
  VPCGatewayAttachment:
    Description: VPC Gateway Attachment
    Value: !Ref VPCGatewayAttachment
    Export:
      Name: !Sub "${EnvironmentName}-VPCGatewayAttachment"
  
  PublicSubnet1:
    Description: Public Subnet 1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${EnvironmentName}-PublicSubnet1"
  
  PublicSubnet2:
    Description: Public Subnet 2
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub "${EnvironmentName}-PublicSubnet2"
 
  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
    Export:
      Name: !Sub "${EnvironmentName}-PublicSubnets"

  PrivateSubnet1:
    Description: Private Subnet 1
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${EnvironmentName}-PrivateSubnet1"

  PrivateSubnet2:
    Description: Private Subnet 2
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub "${EnvironmentName}-PrivateSubnet2"
 
  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    Export:
      Name: !Sub "${EnvironmentName}-PrivateSubnets"

  PublicRouteTable:
    Description: Public Route Table
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub "${EnvironmentName}-PublicRouteTable"

  PrivateRouteTable1:
    Description: Private Route Table 1
    Value: !Ref PrivateRouteTable1
    Export:
      Name: !Sub "${EnvironmentName}-PrivateRouteTable1"

  PrivateRouteTable2:
    Description: Private Route Table 2
    Value: !Ref PrivateRouteTable2
    Export:
      Name: !Sub "${EnvironmentName}-PrivateRouteTable2"

  NatGatewayEIP1:
    Description: NatGatewayEIP 1
    Value: !Ref NatGatewayEIP1
    Export:
      Name: !Sub "${EnvironmentName}-nat-gateway-eip-1"

  NatGatewayEIP2:
    Description: NatGatewayEIP 2
    Value: !Ref NatGatewayEIP2
    Export:
      Name: !Sub "${EnvironmentName}-nat-gateway-eip-2"
  
  NatGateway1:
    Description: Nat Gateway 1
    Value: !Ref NatGateway1
    Export:
      Name: !Sub "${EnvironmentName}-nat-gateway-1"

  NatGateway2:
    Description: Nat Gateway 2
    Value: !Ref NatGateway2
    Export:
      Name: !Sub "${EnvironmentName}-nat-gateway-2"

  InternetGateway:
    Description: Internet Gateway
    Value: !Ref InternetGateway
    Export:
      Name: !Sub "${EnvironmentName}-InternetGateway"

  PublicSubnet1RouteTableAssociation:
    Description: Public Subnet 1 Route Table Association
    Value: !Ref PublicSubnet1RouteTableAssociation
    Export:
      Name: !Sub "${EnvironmentName}-PublicSubnet1RouteTableAssociation"

  PublicSubnet2RouteTableAssociation:
    Description: Public Subnet 2 Route Table Association
    Value: !Ref PublicSubnet2RouteTableAssociation
    Export:
      Name: !Sub "${EnvironmentName}-PublicSubnet2RouteTableAssociation"

  PrivateSubnet1RouteTableAssociation:
    Description: Private Subnet 1 Route Table Association
    Value: !Ref PrivateSubnet1RouteTableAssociation
    Export:
      Name: !Sub "${EnvironmentName}-PrivateSubnet1RouteTableAssociation"

  PrivateSubnet2RouteTableAssociation:
    Description: Private Subnet 2 Route Table Association
    Value: !Ref PrivateSubnet2RouteTableAssociation
    Export:
      Name: !Sub "${EnvironmentName}-PrivateSubnet2RouteTableAssociation"

  PublicRoute:
    Description: Public Route
    Value: !Ref PublicRoute
    Export:
      Name: !Sub "${EnvironmentName}-PublicRoute"
  
  PrivateRoute1:
    Description: Private Route 1
    Value: !Ref PrivateRoute1
    Export:
      Name: !Sub "${EnvironmentName}-PrivateRoute1"

  PrivateRoute2:
    Description: Private Route 2
    Value: !Ref PrivateRoute2
    Export:
      Name: !Sub "${EnvironmentName}-PrivateRoute2"
